# toy_lib

./: MANIFEST.in  README.md  pyproject.toml
src/toy_lib/: __init__.py  cli.py  greeter.py  math.py
tests/: test_greeter.py  test_math.py
