[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "toy-lib"
version = "0.1.0"
description = "A tiny example library with a CLI, data files, and tests."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Example Author", email = "author@example.com" }]
license = { text = "MIT" }
dependencies = []
keywords = ["example", "toy", "cp4d", "packaging"]

[project.urls]
Homepage = "https://example.com/toy-lib"

# Create a CLI command: `toy-hello` that calls toy_lib.cli:main
[project.scripts]
toy-hello = "toy_lib.cli:main"

[tool.hatch.build.targets.wheel]
# Use src layout and specify the package(s) to include in the wheel
packages = ["src/toy_lib"]

[tool.hatch.build]
# Include non-Python data packaged under toy_lib/data/**
include = [
  "src/toy_lib/data/**",
  "README.md",
  "LICENSE",
]
